[tool.poetry]
name = "park-buddies"
version = "0.2.0"
description = "A web application that makes browsing parks a pleasure."
authors = ["Kevin <kev.chu.pro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
black = "^23.3.0"
Flask-SQLAlchemy = "^3.0.3"
gunicorn = "^20.1.0"
Flask-WTF = "^1.1.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
psycopg2-binary = "^2.9.6"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
