[tool.poetry]
name = "park-buddies"
version = "0.1.0"
description = "Application for National Parks"
authors = ["Kevin Chung <kev.chu.pro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "park_buddies"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.31.0"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
